--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
-  font-family: var(--main-font, "Inter-Variable"), sans-serif;
+  font-family: var(--main-font, "Inter-Variable") sans-serif;
   color: var(--accent-color, #000);
   font-variation-settings: "wght" var(--card-text-fw, 400);
   background-image: var(
@@ -35,7 +35,7 @@
 }
 
 .header {
-  font-family: var(--accent-font, "PressStart2P"), "Papyrus", fantasy;
+  font-family: var(--accent-font, "PressStart2P"), fantasy;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -127,11 +127,12 @@
 }
 
 .card__image-watermark {
-  font-family: var(--accent-font, "PressStart2P"), "Papyrus", fantasy;
+  font-family: var(--accent-font, "PressStart2P"), fantasy;
   font-size: 14px;
   position: absolute;
   inset-block-start: 27px;
   inset-inline-end: 27px;
+  opacity: 0.5;
   mix-blend-mode: hard-light;
   text-shadow: -1px 0 var(--stroke-color, rgb(255 255 255 / 0.5)),
     0 1px var(--stroke-color, rgb(255 255 255 / 0.5)),
@@ -175,7 +176,7 @@
 }
 
 .button {
-  font-family: var(--accent-font, "PressStart2P"), "Papyrus", fantasy;
+  font-family: var(--accent-font, "PressStart2P"), fantasy;
   background-color: var(--bg-color, #fff);
   border: 2px solid var(--accent-color, #000);
   position: relative;
@@ -222,6 +223,7 @@
   background-color: transparent;
   border: 2px solid transparent;
   display: flex;
+  transition: border-color 0.3s ease;
   justify-content: center;
   align-items: center;
   block-size: 38px;
@@ -232,7 +234,6 @@
 
 .card__icon-button:focus-visible {
   border-color: var(--accent-color, #000);
-  transition: border-color 0.3s ease;
 }
 
 .card__icon-button:focus {
@@ -261,24 +262,6 @@
   margin-block-end: 1px;
   mix-blend-mode: difference;
   z-index: 1;
-}
-
-#modal {
-  color: var(--accent-color, #000);
-  background-color: var(--bg-color, #fff);
-  border: 2px solid var(--accent-color, #000);
-  padding: 30px;
-}
-
-#modal[open] {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 30px;
-}
-
-#modal::backdrop {
-  background-color: rgb(0 0 0 / 0.75);
 }
 
 .modal-form {
@@ -312,7 +295,7 @@
 }
 
 .modal-text {
-  font-family: var(--accent-font, "PressStart2P"), "Papyrus", fantasy;
+  font-family: var(--accent-font, "PressStart2P"), fantasy;
   font-size: 14px;
   text-transform: uppercase;
   line-height: 1.5;
@@ -344,13 +327,6 @@
   .modal-icon {
     block-size: 39px;
     inline-size: 39px;
-  }
-}
-
-@media (width < 395px) {
-  #modal {
-    inline-size: 100%;
-    padding-inline: 38px;
   }
 
   .modal-form {
